creditas-sf/force-app/main/default/objects/Lead/fields/auxLeadName__c.field-meta.xml
<CustomField>
    <fullName>auxLeadName__c</fullName>
    <description>Campo auxiliar que é preenchido com os dados do Nome Completo do Lead.

Necessário para utilização nas Integrações que utilizam o Nome Completo do Lead.</description>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>auxLeadName</label>
    <type>Text</type>
</CustomField>