creditas-sf/force-app/main/default/objects/Lead/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>CPF do Contato</description>
    <label>CPF do contato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>