creditas-sf/force-app/main/default/objects/Lead/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Tipo de Documento do Lead</description>
    <label>Tipo de documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>