creditas-sf/force-app/main/default/objects/Lead/fields/mainDocumentCode__c.field-meta.xml
<CustomField>
    <fullName>mainDocumentCode__c</fullName>
    <description>Documento Principal da Empresa (CNPJ)</description>
    <label>Documento principal da empresa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>