creditas-sf/force-app/main/default/objects/Lead/recordTypes/Auto.recordType-meta.xml
<RecordType>
    <fullName>Auto</fullName>
    <active>true</active>
    <businessProcess>Auto</businessProcess>
    <description>Tipo de Registro do Lead: Auto</description>
    <label>Auto</label>
</RecordType>