creditas-sf/force-app/main/default/objects/Lead/listViews/CreditasAutoVendas_Lead.listView-meta.xml
<ListView>
    <fullName>CreditasAutoVendas_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Creditas Auto - Vendas</label>
    <queue>CreditasAutoVendas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>